--- a/init.rc
+++ b/init.rc
@@ -11,6 +11,17 @@ on init
     mount /tmp /tmp tmpfs
     mount /data /data tmpfs
 
+    # USB Gadget initialization
+    write /sys/class/android_usb/android0/enable 0
+    # Eventually the VID:DID should be set; adb doesn't seem to be
+    # recognized if they are, though.  Tried 8086:0811 and
+    # 8086:0829 w/o success
+#    write /sys/class/android_usb/android0/idVendor 0x8086
+#    write /sys/class/android_usb/android0/idProduct 0x0829
+    write /sys/class/android_usb/android0/iManufacturer Intel
+    write /sys/class/android_usb/android0/iSerial ABC123
+    write /sys/class/android_usb/android0/functions adb
+
 on boot
     ifup lo
     hostname localhost
