HACK init.rc: Set ADB serialno based on MMC CID
This value satisfies uniqueness requirements; we really don't want
to mess with mounting filesystems to get the 'real' serial number.

Change-Id: I24a6090baeea2ade6ab337b1f856b8f18aa7f617
Depends-Change-Id: I19b1b8340ec706df48f1ca6392a11e22abb483bf

--- a/init.rc
+++ b/init.rc
@@ -14,7 +14,7 @@ on init
     # USB Gadget initialization
     write /sys/class/android_usb/android0/enable 0
     write /sys/class/android_usb/android0/iManufacturer Intel
-    write /sys/class/android_usb/android0/iSerial ABC123
+    write /sys/class/android_usb/android0/iSerial </sys/devices/pci0000:00/0000:00:01.0/mmc_host/mmc0/mmc0:0001/cid
     write /sys/class/android_usb/android0/functions adb
     write /sys/class/android_usb/android0/idVendor 8087
     write /sys/class/android_usb/android0/idProduct 0829
