Add logcat support.
BZ: 26542

Change-Id: I13faa82ce1e72e4669a7520e8a2fb21a0d7a947d
Signed-off-by: lwan89x <liangx.wang@intel.com>
Reviewed-on: http://android.intel.com:8080/37765
Reviewed-by: Tardy, Pierre <pierre.tardy@intel.com>
Tested-by: Tardy, Pierre <pierre.tardy@intel.com>

--- a/init.rc
+++ b/init.rc
@@ -42,3 +42,12 @@ service console /system/bin/sh
 on property:init.svc.droidboot=stopped
     wait 2
     start console
+
+service apk_logfs /system/bin/logcat -b system -b events -b main -b radio -n 20 -r 5000 -v threadtime -f /logs/aplog -K
+    disabled
+
+on property:service.apk_logfs.enable=1
+    start apk_logfs
+
+on property:service.apk_logfs.enable=0
+    stop apk_logfs
